{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 155,
  "lineage": "1b614f4b-b957-9276-5553-1b26dfe75946",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.10",
            "association_id": "eipassoc-0a712eb24bdb693e6",
            "domain": "vpc",
            "id": "eipalloc-0f02fef42428c2517",
            "network_interface": "eni-0123c0702021855b7",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-54-90-8-30.compute-1.amazonaws.com",
            "public_ip": "54.90.8.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_A"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.GW_Alpha",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_Alpha",
            "aws_subnet.Subnet_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:121709200493:instance/i-0fd11e3fa67d02f07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-S3_Profile",
            "id": "i-0fd11e3fa67d02f07",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Alpha",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0123c0702021855b7"
              }
            ],
            "primary_network_interface_id": "eni-0123c0702021855b7",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_ip": "54.90.8.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-029c8921ef26b8df3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cd9f6759516005c",
            "tags": {
              "Name": "Alpha_1.0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-002044a0525dc42e8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.EC2-S3_Profile",
            "aws_iam_role.EC2-S3",
            "aws_internet_gateway.GW_Alpha",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_Alpha",
            "aws_subnet.Subnet_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW_Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121709200493:internet-gateway/igw-0e7395c9412149427",
            "id": "igw-0e7395c9412149427",
            "owner_id": "121709200493",
            "tags": {
              "Name": "IG_Alpha"
            },
            "vpc_id": "vpc-0eb63c81b9a40342c"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ENI_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0123c0702021855b7",
            "ipv6_address_count": 0,
            "mac_address": "0e:b9:30:70:65:53",
            "private_ip": "10.0.0.10",
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-002044a0525dc42e8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cd9f6759516005c"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Alpha",
            "aws_security_group.SG_Alpha",
            "aws_subnet.Subnet_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027829f08d344556b",
            "owner_id": "121709200493",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7395c9412149427",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7395c9412149427",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_Alpha"
            },
            "vpc_id": "vpc-0eb63c81b9a40342c"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_to_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021eac8e054909dd7",
            "route_table_id": "rtb-027829f08d344556b",
            "subnet_id": "subnet-06cd9f6759516005c"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Alpha",
            "aws_route_table.RT_Alpha",
            "aws_subnet.Subnet_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121709200493:security-group/sg-002044a0525dc42e8",
            "description": "Allow SSH, HTTP, HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002044a0525dc42e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_Alpha",
            "name_prefix": "",
            "owner_id": "121709200493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb63c81b9a40342c"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_Alpha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121709200493:subnet/subnet-06cd9f6759516005c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06cd9f6759516005c",
            "map_public_ip_on_launch": false,
            "owner_id": "121709200493",
            "tags": {
              "Name": "Subnet_Alpha"
            },
            "vpc_id": "vpc-0eb63c81b9a40342c"
          },
          "dependencies": [
            "aws_internet_gateway.GW_Alpha",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121709200493:vpc/vpc-0eb63c81b9a40342c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-097bdfce48546b8ca",
            "default_route_table_id": "rtb-0a9bb79f496210ed3",
            "default_security_group_id": "sg-0c514c62fb20bb550",
            "dhcp_options_id": "dopt-d5b0d8af",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eb63c81b9a40342c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9bb79f496210ed3",
            "owner_id": "121709200493",
            "tags": {
              "name": "Alpha"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121709200493:vpc-endpoint/vpce-0fd6d85679be50a99",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-0fd6d85679be50a99",
            "owner_id": "121709200493",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0eb63c81b9a40342c"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    }
  ]
}